<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">读取联系人数据</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">姓名</string>
    <string name="num">电话号码</string>
    <string name="add">添加</string>
    <string name="show">显示所有联系人</string>
    <string name="hint">输入联系人姓名或号码</string>
    <string name="personid">ID号</string>
    <string name="personname">姓名</string>
    <string name="personnum">手机号</string>

</resources>