<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
         <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/num"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show" />
        </LinearLayout>
        <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextView"
            android:layout_width="50dp"
            android:text="@string/personid" />

        <TextView
            style="@style/TextView"
            android:layout_width="80dp"
            android:text="@string/personname" />

        <TextView
            style="@style/TextView"
            android:layout_width="120dp"
            android:text="@string/personnum" />
    </LinearLayout>
        <ListView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

 